Broadcast response schema updates

--- a/doc/specs/schemas/BroadcastWithLastRound.yaml
+++ b/doc/specs/schemas/BroadcastWithLastRound.yaml
@@ -7,3 +7,7 @@ properties:
     $ref: "./BroadcastTour.yaml"
   lastRound:
     $ref: "./BroadcastRoundInfo.yaml"
+
+required:
+  - tour
+  - lastRound
