--- a/doc/specs/tags/broadcasts/api-broadcasts-top.yaml
+++ b/doc/specs/tags/broadcasts/api-broadcasts-top.yaml
@@ -24,6 +24,6 @@ get:
             type: string
             default: "'*'"
       content:
-        application/x-ndjson:
+        application/json:
           schema:
             $ref: "../../schemas/BroadcastTop.yaml"
